--- a/Progress1.html
+++ b/Progress1.html
@@ -180,9 +180,9 @@ hljs.initHighlightingOnLoad();
 <body>
 <h1>Progress til March 14, 2014</h1>
 
-<p>Main Problem: What are the unknown sxy-dependent genes induced in Wild Type (WT), but absent in sxy-mutants (<sup>sxy)?</sup></p>
+<p>Main Problem: What are the unknown sxy-dependent genes induced in Wild Type (WT), but absent in sxy-mutants (sxy)?</p>
 
-<p>Problem: What are ALL the genes that are differentially expressed between WT and <sup>sxy</sup> at 30 minutes after incubation in starvation media (MIV)?</p>
+<p>Problem: What are ALL the genes that are differentially expressed between WT and sxy at 30 minutes after incubation in starvation media (MIV)?</p>
 
 <p>Methodology: Analysis using EdgeR package. Differentially expressed genes are thresholded at q &lt; 0.05 (where q is the Benjamini-Hochberg adjusted p-Values).</p>
 
