Final Update for Progress 1

--- a/Progress1.html
+++ b/Progress1.html
@@ -4,7 +4,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
-<title>Progress til March 14, 2014</title>
+<title>Progress till March 14, 2014</title>
 
 <style type="text/css">
 body, td {
@@ -178,7 +178,7 @@ hljs.initHighlightingOnLoad();
 </head>
 
 <body>
-<h1>Progress til March 14, 2014</h1>
+<h1>Progress till March 14, 2014</h1>
 
 <p>Main Problem: What are the unknown sxy-dependent genes induced in Wild Type (WT), but absent in sxy-mutants (sxy)?</p>
 
