Update for Progress 3.

--- a/Progress3.html
+++ b/Progress3.html
@@ -186,15 +186,45 @@ The statistical cut-off used was q-value &lt; 0.05, where q-value is the Benjami
 -26 out of 27 did not show significant expression difference.
 </code></pre>
 
-<h2>New Questions</h2>
+<h2>Questions to complete the above analysis</h2>
 
 <p>For time = 30,</p>
 
 <ol>
 <li>Why are the number of genes identified by EdgeR and DESeq so different? (In-Progress)</li>
 <li>Are the genes identified by DESeq also found in EdgeR?</li>
-<li></li>
+<li>[DESeq] How many genes are up/down-regulated?</li>
+<li>[DESeq] How many of the crp-S genes are up/down-regulated?</li>
+<li>[DESeq] What are the non-differentially expressed genes?</li>
 </ol>
+
+<p>For time = 0,</p>
+
+<ol>
+<li>[EdgeR] How many genes are up/down-regulated?</li>
+</ol>
+
+<h2>Significance of Analysis</h2>
+
+<p>Question 1 (WT vs sxy at t = 30) shows which genes require sxy for expression when grown in starvation media (M4 media).</p>
+
+<p>Question 2 (WT vs sxy at t = 0) however shows which genes may (?) require baseline sxy expression for normal expression. Is the expression differential really that different/significant? This comparison is pretty interesting in the sense that the current assumption is that sxy expression is significant during starvation (for competence), but what about during &ldquo;normal&rdquo; circumstances?</p>
+
+<h2>New Questions</h2>
+
+<ol>
+<li>What is the distribution of q-values for WT vs sxy at time = 0, 30?</li>
+<li>[Redundant?] What are the differentially expressed genes for wild type between time = 0 and 30?</li>
+<li>[Redundant?] Similarly, for genes in the sxy mutant between time = 0 and 30?</li>
+<li>[Redundant?] Do the genes Q2, when subtracted with those in Q3, give the same results as the comparison between WT and sxy at time = 30?</li>
+<li>??</li>
+</ol>
+
+<h1>Part 1: ??</h1>
+
+<p>??</p>
+
+<h1>END</h1>
 
 </body>
 
