--- a/Progress3.html
+++ b/Progress3.html
@@ -196,12 +196,14 @@ The statistical cut-off used was q-value &lt; 0.05, where q-value is the Benjami
 <li>[DESeq] How many genes are up/down-regulated?</li>
 <li>[DESeq] How many of the crp-S genes are up/down-regulated?</li>
 <li>[DESeq] What are the non-differentially expressed genes?</li>
+<li>[DESeq and EdgeR] How many of the differentially expressed genes are crp-N genes (at least, 1st gene of the operon)?</li>
 </ol>
 
 <p>For time = 0,</p>
 
 <ol>
 <li>[EdgeR] How many genes are up/down-regulated?</li>
+<li>[EdgeR] How many genes are crp-N genes (at least, 1st gene of the operon)?</li>
 </ol>
 
 <h2>Significance of Analysis</h2>
